--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,23 +1,29 @@
-$color: #00cc99;
-
-.header {
-  height: 200px;
-  background-color: #00cc99;
+.carousel-item-height{
+  height: 450px;
 }
 
-.footer {
-  height: 200px;
-  background-color: #00cc99;
+.bg-cover{
+  background-size: cover;
+  background-position: center center;
 }
 
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  display: flex;
-  transition: all 0.5s;
-  &:hover {
-    width: 200px;
-    background-color: $color;
+.carousel-caption{
+  background-color: rgba(0,0,0,0.6);
+}
+
+.position-relative{
+  position: relative;
+}
+.position-absolute{
+  position: absolute;
+}
+
+@media(min-width: 768px){
+  .text-md-dark{
+    color: #333;
   }
+}
+
+.z-index-top{
+  z-index: 10;
 }
